# codeocean-sdk-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  pyproject.toml
.circleci/: config.yml
examples/: create_data_asset.py  run_capsule.py  run_pipeline.py
src/codeocean/: __init__.py  capsule.py  client.py  components.py  computation.py  custom_metadata.py  data_asset.py  enum.py  error.py  errors.py  folder.py  pipeline.py
src/codeocean/models/: __init__.py  capsule.py  computation.py  data_asset.py
tests/: test_client.py  test_error.py  test_git_sync.py  test_package.py
