[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeocean"
version = "0.7.0"
authors = [
  { name="Code Ocean", email="dev@codeocean.com" },
]
description = "Code Ocean Python SDK"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "dataclasses-json",
    "requests",
    "requests_toolbelt",
    "backports.strenum>=1.3.1; python_version<'3.11'",
]
license = "MIT"

[project.optional-dependencies]
dev = ["flake8", "hatch"]

[project.urls]
Homepage = "https://github.com/codeocean/codeocean-sdk-python"
Issues = "https://github.com/codeocean/codeocean-sdk-python/issues"
Changelog = "https://github.com/codeocean/codeocean-sdk-python/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.circleci",
]

[tool.hatch.build.targets.wheel]
packages = ["src/codeocean"]

[tool.hatch.envs.default.scripts]
lint = "flake8 src tests examples"
test = "python -m unittest -v"

[[tool.hatch.envs.test.matrix]]
python = ["3.9", "3.10", "3.11", "3.12", "3.13"]
